# EstimatingMicroDSOPs

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  _toc.yml  do_all.py  do_figs.py  environment.yml  myst.yml  noxfile.py  pyproject.toml  reproduce.sh
.agents/: architecture.md  build-and-ci.md  economics-context.md  estimation-pipeline.md  paper-and-docs.md
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml  deploy.yml  python-app.yml
Calibration/: EstimationParameters.py  Options.py  SetupSCFdata.py
Code/: ConsWealthPortfolioModel.py  README.md  StructEstimation.py  tests.py
Notes/: .#math.tex  BeqRefs.bib  bequests_lit_rev.aux  bequests_lit_rev.bbl  bequests_lit_rev.blg  bequests_lit_rev.out  bequests_lit_rev.run.xml  bequests_lit_rev.tex
Notes/Equations/: #DeNardi_2004#  Abel_1985  Barro_1974  Cagetti_2003  Cagetti_2006  Cagetti_2008  Carroll_1998  DeNardi_2004  DeNardi_2016  Dynan_2004  Gourinchas_2002  Saez_2017  Straub_2019
Notes/auto/: BeqRefs.el  bequests_lit_rev.el
Paper/: #math.tex#  01-paper.md  main.bib  math.tex  myst.yml
Paper/auto/: BeqRefs.el  bequests_lit_rev.el
Paper/structural_estimation_pdf_tex/: arxiv.sty  main.bib  structural_estimation.tex
Presentation/: .Rhistory  strucutral_estimation.Rmd  strucutral_estimation.html
Tables/: IndShock_bootstrap_results.csv  IndShock_estimate_results.csv  Portfolio_bootstrap_results.csv  Portfolio_estimate_results.csv  WarmGlowPortfolio_estimate_results.csv  WarmGlow_estimate_results.csv  WealthPortfolio_bootstrap_results.csv  WealthPortfolio_estimate_results.csv  bootstrap_results.csv  estimate_results.csv
calibration/: EstimationParameters.py  estimation_parameters.py  setup_scf_data.py
code/: IndShock.ipynb  Portfolio.ipynb  SCF_notebook.ipynb  WarmGlow.ipynb  WarmGlowPortfolio.ipynb  WealthPortfolio.ipynb  agents.py  do_all.py  do_figs.py  estimation.py  figs.ipynb  parameters.py  run_all.py  run_all_msm.py  setup.py  tests.py
code/calibration/: estimation_parameters.py  setup_scf_data.py
code/data/: Cagetti2003.csv  S&P Target Date glidepath.xlsx
code/estimark/: agents.py  chris_parameters.py  estimation.py  min.py  msm.py  options.py  parameters.py  scf.py  snp.py
code/msm_notebooks/: FinAssets_Cov.ipynb  MSM Full Bequest model.ipynb  MSM LCIM model.ipynb  MSM TRP model.ipynb  MSM Term Bequest model.ipynb  MSM Warm Glow Bequest model.ipynb  cis_results.pkl  fullbeq_results.pkl  norm_networth_cov.pkl  norm_networth_mom.pkl  savres.ipynb  trp_results.pkl
code/notebooks/: IndShock.ipynb  Model_Comparisons.ipynb  Portfolio.ipynb  SCF_notebook.ipynb  WarmGlow.ipynb  WarmGlowPortfolio.ipynb  WealthPortfolio.ipynb  msm.ipynb  parse_tables.ipynb  testing_notebook.ipynb
code/tables/: IndShockSub(Labor)Market_estimate_results.csv  IndShockSub(Stock)(Labor)Market_estimate_results.csv  IndShock_estimate_results.csv  PortfolioSub(Labor)Market_estimate_results.csv  PortfolioSub(Stock)(Labor)Market_estimate_results.csv  Portfolio_estimate_results.csv  WarmGlowPortfolioSub(Labor)Market_estimate_results.csv  WarmGlowPortfolioSub(Stock)(Labor)Market_estimate_results.csv  WarmGlowPortfolio_estimate_results.csv  WarmGlowSub(Labor)Market_estimate_results.csv  WarmGlowSub(Stock)(Labor)Market_estimate_results.csv  WarmGlow_estimate_results.csv  WealthPortfolioSub(Labor)Market_estimate_results.csv  WealthPortfolioSub(Stock)Market_estimate_results.csv  WealthPortfolio_estimate_results.csv
content/paper/: 01-paper.md  README.md  main.bib  math.ipynb  math.tex
content/slides/: slides.aux  slides.html  slides.ipynb  slides.qmd  slides.tex  strucutral_estimation.Rmd  strucutral_estimation.html
content/tables/: IndShockSub(Labor)Market_estimate_results.csv  IndShockSub(Stock)(Labor)Market_estimate_results.csv  IndShockSub(Stock)Market_estimate_results.csv  IndShock_estimate_results.csv  PortfolioSub(Labor)Market_estimate_results.csv  PortfolioSub(Stock)(Labor)Market_estimate_results.csv  PortfolioSub(Stock)Market_estimate_results.csv  Portfolio_estimate_results.csv  WarmGlowPortfolioSub(Labor)Market_estimate_results.csv  WarmGlowPortfolioSub(Stock)(Labor)Market_estimate_results.csv  WarmGlowPortfolioSub(Stock)Market_estimate_results.csv  WarmGlowPortfolio_estimate_results.csv  WarmGlowSub(Labor)Market_estimate_results.csv  WarmGlowSub(Stock)(Labor)Market_estimate_results.csv  WarmGlowSub(Stock)Market_estimate_results.csv  WarmGlow_estimate_results.csv  WealthPortfolioSub(Labor)Market_estimate_results.csv  WealthPortfolioSub(Stock)(Labor)Market_estimate_results.csv  WealthPortfolioSub(Stock)Market_estimate_results.csv  WealthPortfolio_estimate_results.csv  parameters.tex
docs/: conf.py  index.md
paper/: 01-paper.md  math.tex
paper/structural_estimation_pdf_tex/: structural_estimation.tex
reproduce/: reproduce_environment.sh
slides/: strucutral_estimation.Rmd  strucutral_estimation.html
src/: README.md  do_all.py  run_all.py  run_all_msm.py  tests.py
src/estimark/: __init__.py  agents.py  estimation.py  options.py  parameters.py  scf.py  snp.py
src/msm_notebooks/: FinAssets_Cov.ipynb  MSM TRP model.ipynb  (+13 more)
tables/: IndShock_bootstrap_results.csv  Portfolio_estimate_results.csv  WarmGlowPortfolio_bootstrap_results.csv  WarmGlow_bootstrap_results.csv  WarmGlow_estimate_results.csv
tests/: test_package.py
(+143 files in other folders)
