[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "estimark"
authors = [
  { name = "Alan Lujan", email = "alanlujan91@gmail.com" },
]
description = "Estimating Microeconomic Dynamic Stochastic Optimization Problems"
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
# Runtime deps for estimation (also satisfied by conda env from environment.yml)
run = [
  "numpy",
  "pandas",
  "matplotlib",
  "scipy",
  "statsmodels",
  "estimagic>=0.4",
  "HARK @ git+https://github.com/econ-ark/HARK@master",
]
test = [
  "pytest >=6",
  "pytest-cov >=3",
]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
]
docs = [
  "sphinx>=7.0",
  "myst_parser>=0.13",
  "sphinx_copybutton",
  "sphinx_autodoc_typehints",
  "furo>=2023.08.17",
]

[project.urls]
Homepage = "https://github.com/econ-ark/EstimatingMicroDSOPs"
"Bug Tracker" = "https://github.com/econ-ark/EstimatingMicroDSOPs/issues"
Discussions = "https://github.com/econ-ark/EstimatingMicroDSOPs/discussions"
Changelog = "https://github.com/econ-ark/EstimatingMicroDSOPs/releases"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/estimark/_version.py"

[tool.hatch.envs.default]
features = ["test"]
scripts.test = "pytest {args}"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]


[tool.coverage]
run.source = ["estimark"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.8"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "estimark.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = [
  "numpy.*",
  "pandas.*",
  "matplotlib.*",
  "scipy.*",
  "statsmodels.*",
  "estimagic.*",
  "HARK.*",
  "dask.*",
  "estimark.min",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["do_all", "run_all", "run_all_msm", "tests"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_subclassing_any = false


[tool.ruff]

[tool.ruff.lint]
extend-select = [
  "B",        # flake8-bugbear
  "I",        # isort
  "ARG",      # flake8-unused-arguments
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "ICN",      # flake8-import-conventions
  "G",        # flake8-logging-format
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
  "EXE",      # flake8-executable
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "PLR1714",  # Consider merging multiple comparisons
  "ISC001",   # Conflicts with formatter
  "RET504",   # Unnecessary assignment before return
]
isort.required-imports = ["from __future__ import annotations"]
isort.known-first-party = ["estimark"]
# Uncomment if using a _compat.typing backport
# typing-modules = ["estimark._compat.typing"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]
"src/estimark/**" = ["T20"]
"src/*.py" = ["T20", "E402"]
"src/notebooks/**" = ["T20", "E402", "PD", "B018"]
"src/msm_notebooks/**" = ["T20", "E402", "PD", "ARG001", "E712"]
"content/**/*.ipynb" = ["T20", "E402", "F403", "F405"]


[tool.codespell]
ignore-words-list = "mian,aer,cant"
skip = "content/slides/slides_files,*.min.js,*.svg,*.pdf"

[tool.pylint]
py-version = "3.8"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
  # CI nox pylint env has no HARK/numpy/pandas; avoid E0401 import-error
  "import-error",
]
